# zarzadzanie-bigdata-projekt-zaliczeniowy

./: README.md  app.py  charts.py  cleaning.py  data_loader.py  pyproject.toml
.streamlit/: config.toml
