[project]
name = "playstation-market-explorer"
version = "0.1.0"
description = "Aplikacja analityczna Streamlit do analizy rynku gier PlayStation (projekt zaliczeniowy, Zarządzanie Big Data)."
authors = [{ name = "Jakub Nowosad", email = "contact@soleback.com" }]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "streamlit>=1.50",
    "pandas>=2.1",
    "numpy>=1.26",
    "plotly>=5.20",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
